chore: replace webpack with vite

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,6 @@
   <body>
     <div id="root"></div>
 
-    <!-- Notice we are pointing to `bundle.js` file -->
-    <script src="bundle.js"></script>
+    <script type="module" src="./index.jsx"></script>
   </body>
 </html>
