--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React with Webpack</title>
+    <title>%VITE_APP_NAME%</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="root"></div>
 
-    <!-- Notice we are pointing to `bundle.js` file -->
-    <script src="bundle.js"></script>
+    <script type="module" src="./index.jsx"></script>
   </body>
 </html>
